# InstaFix

./: .gitignore  Caddyfile  Dockerfile  LICENSE.txt  README.md  evict_static.py  go.mod  go.sum  instafix.py  main.go  pyproject.toml  worker.js
.github/workflows/: build.yml
handlers/: embed.go  grid.go  images.go  oembed.go  videos.go
handlers/data/: data.go  database.go  extractor.lde  extractor_lde.go
handlers/scraper/: cache.go  data.go  remote.go  zstd.dict
scripts/: build.sh  docker-compose.yml
scripts/k8s/: instafix-deployment.yaml  instafix-ingress.yaml
src/: Dockerfile  main.go
src/handlers/: embed.go  images.go
src/handlers/data/: data.go
src/utils/: crawlerdetect.go  jsonesc.go
src/views/: jade.go  model.go
templates/: 404.html  base.html  home.html
utils/: crawlerdetect.go  httputils.go  jsonesc.go  strconv.go  strings.go
views/: embed.jade  embed.jade.go  home.jade  home.jade.go  jade.go  model.go  oembed.manual.go
views/model/: model.go
