[tool.poetry]
name = "InstaFix"
version = "0.1.0"
description = "Fix Instagram embeds in Discord (and Telegram!)"
authors = ["Akmal <magchuz@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
httpx = {extras = ["http2"], version = "^0.23.0"}
aioredis = "^2.0.1"
fastapi = "^0.78.0"
Jinja2 = "^3.1.2"
sentry-sdk = "^1.6.0"
pyvips = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
