[tool.poetry]
name = "InstaFix"
version = "0.1.0"
description = "Fix Instagram embeds in Discord (and Telegram!)"
authors = ["Akmal <magchuz@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^21.2.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
Jinja2 = "^3.1.2"
sentry-sdk = "^1.29.2"
pyvips = "^2.2.1"
httpx = "^0.24.1"
selectolax = "^0.3.16"
esprima = "^4.0.1"
tenacity = "^8.2.2"
diskcache = "^5.6.1"
orjson = "^3.9.2"
blacksheep = "^1.2.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
